# BlackBull

./: .gitignore  404.html  ALPHA_READINESS.md  CHANGELOG.md  CLAUDE.md  KNOWN_LIMITATIONS.md  Pipfile  README.md  SECURITY.md  asgi.py  cert.pem  chatserver.py  client.py  data.db  data_store.py  gen_ref_pages.py  h1client.py  h2client.py  index.html  key.pem  logging.cfg  logging.conf  logging.json  main.py  mkdocs.yml  objects.inv  plugin.py  pyproject.toml  pytest.ini  render.py  san.cnf  server.crt  server.csr  server.key  setup.cfg  setup.py  sitemap.xml  stats_access_log.py  wsclient.py
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/skills/: add-event  bench-compare  new-http2-frame  protocol-handler  type-check
.github/workflows/: codeql.yml  conformance.yml  docs.yml  pip-audit.yml  publish.yml  test.yml
ALPHA_READINESS/: index.html
ActorDesign/: index.html
BlackBull/: BlackBull.py  __init__.py  frame.py  logger.py  response.py  rsock.py  server.py  stream.py  util.py  utils.py  watch.py
BlackBull/client/: __init__.py  client.py  response.py
BlackBull/server/: __init__.py  response.py  server.py
about/architecture/: index.html
about/conformance/: index.html
about/grpc-assessment/: index.html
about/internals/: index.html
about/mqtt-actor-design/: index.html
about/rfc9113-implementation/: index.html
api/SUMMARY/: index.html
api/blackbull/: index.html
bench/: CHARACTERIZATION.md  README.md  app.py  benchmark.sh  command.txt  escape.py  h2load_run.sh  install.sh  k6_run.sh  lag_monitor.py  middleware_stack.py  parse_microbench.py  profile_under_load.sh  router_microbench.py  summarize.py
bench/aws/: .known_hosts-off  .known_hosts-on  README.md  USAGE.md  _aggregate_ab.py  _pair_bench.sh  config.sh  down.sh  full_ab.sh  full_ab_sequential.sh  get_mypolicy.py  httparena_compare.new.sh  httparena_compare.old.sh  httparena_compare.sh  install.sh  latency_probe_v0290a1.sh  profile.sh  profile_lanes.sh  run.sh  sprint33_phase_trace_2w.sh  sprint33_phase_trace_ec2.sh  sprint33_phase_trace_scaling.sh  sprint33_static_pyspy.sh  sprint34_compare_bb_fastapi.sh  sprint34_native_vs_docker.sh  sprint35_cellg.sh  up.sh
bench/conformance/: README.md  autobahn_app.py  autobahn_fuzzingclient.json  autobahn_run.sh  h2spec_app.py  h2spec_run.sh
bench/hostile_repro/: README.md  characterize_slowloris.py  probe.sh
bench/http11probe/: probe_scan.py
bench/httparena/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  USAGE.md  app.py  app_v0600.py  compare_bb_fastapi.sh  compare_table.py  db.py  grpc_bench.py  install_docker_shim.sh  launcher.py  logging_access.ini  meta.json  monitor.sh  patch_cpuset.sh  patch_httparena.py  postprocess.sh  requirements.txt  run_httparena.sh  runner.sh  sprint34_compare_remote.sh  sprint34_probe_app.py  sprint34_remote.sh  sprint34_synthetic_data.py  sprint35_cellg_remote.sh  sprint35_phase_remote.sh  sprint35_profile_target.py
bench/k6/: http_rampup.js  http_stress.js  websocket.js
bench/mqtt/: tap_throughput.py
bench/oha/: run.sh
bench/peers/: README.md  asgi_app.py  compare_servers.sh  fastapi_app.py  hypercorn.toml  k6_one.sh  nginx.conf  nginx_proxy.conf  quart_app.py  run_peer.sh  server_lifecycle_remote.sh  starlette_app.py  summarize.py
bench/soak/: mixed.lua  sample.py  soak.sh
bench/static_repro/: access_log_server.py  drain_time.sh  latency_probe.sh  parse_access_log.py  rotate.lua  run.sh  server_probe.py
bench/wrk/: _stats.py  lane_e.sh  no_keepalive.lua  pipeline.lua  post_echo.lua  run.sh
bench/wrk2/: run.sh
blackbull/: BlackBull.py  __init__.py  actor.py  app.py  asgi.py  cli.py  config.py  connection.py  di.py  env.py  event.py  event_aggregator.py  extension.py  frame.py  headers.py  logger.py  middlewares.py  openapi.py  request.py  response.py  router.py  rsock.py  stream.py  testing.py  utils.py  watch.py
blackbull/client/: __init__.py  client.py  exceptions.py  http1.py  http2.py  response.py  scenario.py  scenario_oracle.py  websocket.py  websocket_h2.py
blackbull/fault_injection/: __init__.py  _tls.py  h2_server.py  oracle_h1.py  scenario_h1.py  scenario_h2.py
blackbull/grpc/: __init__.py  asgi.py  codec.py  compression.py  registry.py  status.py
blackbull/middleware/: __init__.py  base.py  cache.py  compression.py  cors.py  proxy.py  session.py  static.py  utils.py  websocket.py
blackbull/mqtt/: __init__.py  actor.py  asyncapi.py  broker.py  connection.py  extension.py  (+2 more)
docs/: ALPHA_READINESS.md  ActorDesign.md  draft-devto-htcpcp.md  guide.md  index.md
draft-devto-htcpcp/: index.html
examples/: chatserver.py  connection_object.py  dependency_injection.py  echo_tcp.py  edge_inference.py  grpc_greeter.py  grpc_server.py  helloworld-cache.py  helloworld-cors.py  helloworld-simple.py  helloworld.py  mqtt_broker.py  probe_target.py  request_object.py  scenario_h1_fault_injection.py  scenario_h2_fault_injection.py  sse_token_stream.py  translation_hub.py  typed_routes_fail.py  typed_routes_ok.py
guide/: index.html
ledger/: main.py
search/: search_index.json
stylesheets/: extra.css
templates/: 403.html  dummy.html  login.html  table.html
test/: test_BlackBull.py  test_HTTP2Handler.py  test_client.py  test_plugin.py  test_stream.py  test_util.py
tests/: cert.pem  conftest.py  test_BlackBull.py  test_HTTP2Handler.py  test_after_handler_event.py  test_app_events.py  test_asgi_server.py  test_before_handler_event.py  test_client.py  test_error_routing.py  test_event.py  test_event_aggregator.py  test_frame.py  test_h2_continuation.py  test_http2_actor.py  test_middleware_capabilities.py  test_middlewares.py  test_parser.py  test_request_completed_event.py  test_request_disconnected_event.py  test_request_received_event.py  test_response.py  test_router.py  test_rsock.py  test_server_dispatch.py  test_static.py  test_stream.py  test_streaming.py  test_utils.py  test_websocket_actor.py  test_websocket_connected_event.py  test_websocket_disconnected_event.py  test_websocket_handler.py  test_websocket_message_event.py
(+545 files in other folders)
