[project]
name = "blackbull"
# ZeroVer (0.MINOR.PATCH).  MINOR advances at each sprint close (one
# minor per closed sprint); PATCH covers bug fixes / harness work
# between sprints.  No 1.0 commitment until the framework's identity
# and surface have stabilised across several sprints.  See CHANGELOG.md.
version = "0.50.0"
description = "Async ASGI 3.0 framework with a from-scratch HTTP/1.1 parser, HTTP/2 frame layer, and WebSocket codec. HPACK delegates to the hpack library."
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "TOKUJI" }
]

# PEP 639 license declaration — SPDX identifier in the field, LICENSE
# file listed in license-files.  Replaces the older `license = {file =
# "LICENSE"}` form which embedded the entire 10 KB license text into
# the metadata's License field.  PEP 639 says SPDX supersedes the
# Trove "License ::" classifier, so the classifier is removed below.
license = "Apache-2.0"
license-files = ["LICENSE"]

keywords = ["asgi", "asyncio", "http", "http2", "websocket", "web", "framework", "server"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    # HPACK header compression for HTTP/2 — pure Python; the
    # BlackBull HTTP/2 frame layer wraps hpack's Encoder/Decoder
    # plus our own fastpath in blackbull/protocol/hpack_fastpath.py.
    # Re-implementing a conformant HPACK encoder/decoder is a
    # project of its own; the rest of the HTTP/2 stack
    # (framing, flow control, prioritisation, push, stream
    # actor) is BlackBull's own code.
    "hpack",
    # beartype is load-bearing — Router.validate() imports it at every
    # app.run() / app.serve() boot to type-check path-param converters
    # against handler annotations.  Without it the framework crashes on
    # first request handling.  Was historically declared in the
    # [validation] optional extra; promoted to a hard dependency in
    # 0.27.1 so `pip install blackbull` works out of the box.
    "beartype",
]

[project.urls]
Homepage = "https://github.com/TOKUJI/BlackBull"
Documentation = "https://tokuji.github.io/BlackBull/"
Repository = "https://github.com/TOKUJI/BlackBull"
Changelog = "https://github.com/TOKUJI/BlackBull/blob/master/CHANGELOG.md"
Issues = "https://github.com/TOKUJI/BlackBull/issues"

[project.scripts]
blackbull = "blackbull.cli:main"

[project.optional-dependencies]
compression = [
    "brotli",
    "zstandard"
]

# [validation] retained as a no-op alias for backwards compatibility
# with prior install instructions (`pip install -e '.[validation]'`).
# beartype is now a hard dependency — see core ``dependencies``.
validation = []

# MQTT 5 broker (blackbull.mqtt) — a non-core "bridge" protocol shipped with
# BlackBull.  Pure-Python with no extra runtime dependencies today; the extra
# exists to mark the broker as opt-in and to reserve the name for future
# transport deps (e.g. MQTT-over-WebSocket / TLS).  Install with
# `pip install 'blackbull[mqtt]'`.
mqtt = []

# Unary gRPC over HTTP/2 (blackbull.grpc).  Pure-Python with no extra runtime
# dependencies — handlers exchange raw message bytes, so protobuf is the
# application's choice, not the framework's.  The extra marks gRPC as opt-in
# and reserves the name; add `protobuf` / `grpcio-tools` yourself if you want
# `protoc`-generated message classes.  Install with `pip install 'blackbull[grpc]'`.
grpc = []

# The protobuf layer of the gRPC story (Sprint 66) — object-typed handlers
# from generated *_pb2 modules, server reflection (grpcurl/Postman
# discoverability), the grpc.health.v1 service, and rich error details.
# Lives in the separate `blackbull-protobuf` package so the protobuf runtime
# never enters this wheel's dependency metadata and can version
# independently.  Install with `pip install 'blackbull[protobuf]'`.
protobuf = [
    "blackbull-protobuf",
]

# Real-client gRPC interop testing.  ``grpcio`` is a spec-strict, third-party
# gRPC client used by tests/conformance/grpc/test_grpc_real_client_h2c.py to
# drive BlackBull over a real h2c socket — the only test that puts an external
# gRPC client on the wire.  Not needed to *use* BlackBull's gRPC (that layer is
# pure-Python); only to run the interop conformance suite (the grpc-interop CI
# job installs it).  Install with `pip install 'blackbull[grpc-interop]'`.
grpc-interop = [
    "grpcio",
    # Client-side packages for the protobuf-layer interop suite
    # (tests/conformance/grpc/test_grpc_protobuf_interop.py): the official
    # reflection descriptor database, health gencode + stub, and the
    # rpc_status decoder — each an independent, spec-strict peer for one
    # blackbull-protobuf deliverable.  The server side additionally needs
    # `blackbull-protobuf` itself (the suite skips without it; the CI job
    # installs it explicitly so the gate cannot silently pass on nothing).
    "grpcio-reflection",
    "grpcio-health-checking",
    "grpcio-status",
]

testing = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "pytest-cov",
    "beartype",
    "pytest-beartype",
    "httpx[http2]",
    "websockets",
    "hypothesis",
    # Exercises the `.env` resolution path in app.run() (blackbull[dotenv]).
    "python-dotenv",
    # Validates the generated OpenAPI 3.1 documents against the upstream
    # schema in tests/unit/test_openapi.py — proves the spec we emit is
    # consumable by the wider OpenAPI ecosystem.
    "openapi-spec-validator",
]

docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-autorefs"
]

speed = [
    "uvloop",
]

reload = [
    "watchfiles",
]

# `.env` file resolution for app.run() / the blackbull CLI.  Without this extra,
# app.run() still resolves BLACKBULL_* from the real process environment; the
# extra only adds support for loading a `.env` file from the working directory.
# Install with `pip install 'blackbull[dotenv]'`.
dotenv = [
    "python-dotenv",
]

# Deliberate-misbehaviour toolkit (blackbull.fault_injection).  The
# H2FaultServer itself only needs the stdlib; this extra pulls in
# cryptography for the self-signed TLS helper, and httpx[http2] so
# users running examples/scenario_h2_fault_injection.py from a fresh
# install have a real HTTP/2 client on hand.
fault-injection = [
    "cryptography",
    "httpx[http2]",
]

benchmark = []  # k6 and h2load are installed via bench/install.sh (not pip packages)

profiling = [
    "py-spy",
]

[tool.coverage.run]
source = ["blackbull"]

[tool.coverage.report]
omit = ["*/tests/*",
        "examples/*"
        ]

[tool.setuptools.packages.find]
where = ["."]
include = ["blackbull*"]
exclude = ["bench*", "tests*", "examples*", "docs*", "site*", "templates*"]

[tool.setuptools.package-data]
# PEP 561 — distribute inline type hints to downstream type-checkers.
blackbull = ["py.typed"]