[metadata]
name = blackbull
version = 0.0.1
description = Asynchronous ASGI application framework.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License
license_file = LICENSE
url = https://github.com/TOKUJI/BlackBull

[options]
package_dir=
    =blackbull
packages=find:
install_requires=
        h2

[options.packages.find]
where=blackbull
