[metadata]
name = blackbull
version = 0.0.1
description = Asynchronous ASGI application framework.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License
license_file = LICENSE
url = https://github.com/TOKUJI/BlackBull

[options]
packages=find:
python_requires = >=3.11
install_requires=
    h2
    httpx
    websockets
    uvicorn
    asgiref
    pydantic
[options.extras_require]
compression =
    brotli
    zstandard
testing =
    pytest
    pytest-asyncio
docs =
    mkdocs-material
    mkdocstrings[python]
    mkdocs-gen-files
    mkdocs-literate-nav
    mkdocs-autorefs

[options.packages.find]
where=.
